# nanograd

./: .gitignore  .readthedocs.yaml  LICENSE  Pipfile  README.md  env.sh  pyproject.toml  requirements.txt
docs/: example.ipynb
src/: nn.py  visualize.py
src/nanograd/: nn.py  value.py  value_interface.py  visualize.py
src/nanograd/tests/: nn.py  value.py
