[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nanograd"
version = "0.0.1"
authors = [
    {name = "Volodymyr Dyma", email = "emissaryprog@gmail.com"},
]
description = "Minimal implementation of autograd engine"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["autograd", "machine learning", "deep learning", "neural networks"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "graphviz",
]
[project.optional-dependencies]
dev = [
    "jupyterlab",
    "mkdocs"
]